Frag with framelayout done

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -12,6 +12,7 @@
 
     <Button
         android:id="@+id/f_blank_btn"
+        android:text="Frag Out Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
