--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,21 +10,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.fragmentbutton.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-
-    <Button
-        android:id="@+id/a_main_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <FrameLayout
         android:id="@+id/a_main_frame"
+        class="com.example.fragmentbutton.BlankFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn1"
+        android:text="#1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="createDetailActivity"/>
 
-    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/a_main_frame1"
+        class="com.example.fragmentbutton.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn2"
+        android:text="#2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="createDetailActivity"/>
+
+    <FrameLayout
+        android:id="@+id/a_main_frame2"
+        class="com.example.fragmentbutton.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
